nginx/nginx-dp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-nginx
  template:
    metadata:
      labels:
        app: demo-nginx
    spec:
      containers:
        - name: demo-nginx
          image: nginx
          imagePullPolicy: Always
          ports:
          - containerPort: 80
