nginx/nginx-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: demo-nginx-web-ir
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`nginx.local`)
    kind: Rule
    services:
    - name: demo-nginx-svc
      port: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: demo-nginx-websecure-ir
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`nginx.local`)
    kind: Rule
    services:
    - name: demo-nginx-svc
      port: 80
  tls:
    certResolver: default
